Modification BP_Player et Améliorations Camera Control
- Suppression du BP_Player
- Ajout du BP_Camera_Player : c'est un BP Pawn qui est plus cohérant avec le style de jeu qu'on veut faire. Normalement, j'ai tout modifié comme il faut, mais s'il reste des erreurs, ne pas hésiter à les notifier.
- Amélioration du contrôle de la caméra : le joueur peut maintenant bouger la camera avec le gamepad, il ne peut pas encore zoomer avec le gamepad, j'ai commencé un code mais il y'a quelques trucs à changer. Le joueur peut bouger la caméra si sa souris est proche des bords de l'écran. Et j'ai amélioré les déplacements de globaux de la caméra, c'est plus fluide, avec moins de latence. La vitesse de déplacement s'adapte aussi au niveau de zoom, plus on est zoomé, plus on est lent.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -130,12 +130,18 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Speedx3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
 +ActionMappings=(ActionName="Mouse_Left_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Mouse_Right_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Zoom Out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTriggerAxis)
++ActionMappings=(ActionName="Zoom In",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="MouseMoveForward",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MouseMoveRight",Scale=-1.000000,Key=MouseX)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Trigger_zoom_In",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="Trigger_Zoom_Out",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
