Création BP_Day_Night + divers modifs
- Ajout d'un cycle jour nuit que l'on peut activer ou désactiver via le BP_Day_Night, en cochant ou non les bools.
- Ajout d'une nouvelle SkySphere via le BP_Day_Night
- Ajout de light sur le Koro et les villageois qui s'active en fonction de l'heure de la journée
- Ajustement de la distance de visibilité des lights

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,3 +63,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/Indian_Hexa")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/Indian_Hexa")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+r.MinScreenRadiusForLights=0.010000
+
