--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -125,11 +125,12 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Zoom In",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="Zoom Out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
-+ActionMappings=(ActionName="NormalSpeed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
-+ActionMappings=(ActionName="Speedx2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
-+ActionMappings=(ActionName="Speedx3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
++ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
 +ActionMappings=(ActionName="Mouse_Left_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Mouse_Right_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
++ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
++ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
