Creation de différents Basic Widget
- Création du WBP_Basic_Button et du WBP_Basic_Background
- Création de la map Main_Title_Map et du WBP_Main_Title

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Totem/Actors/GameInstance/BP_Totem_GameInstance.BP_Totem_GameInstance_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
