--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,9 +3,9 @@ GameName=Indian_Hexa
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/Totem/Map/Main_Title_Map.Main_Title_Map
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
