--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -131,6 +131,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
 +ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
 +ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Focus",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
