Modification du Speed_Control
- Le système utilise maintenant un Event Dispatcher

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -125,19 +125,27 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Zoom In",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="Zoom Out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
-+ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
 +ActionMappings=(ActionName="Mouse_Left_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Mouse_Right_Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
-+ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
-+ActionMappings=(ActionName="Speed_Control",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
 +ActionMappings=(ActionName="Focus",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Speed_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Speed_1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="Speed_2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="Speed_3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
++ActionMappings=(ActionName="Speed_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Speed_1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
++ActionMappings=(ActionName="Speed_2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
++ActionMappings=(ActionName="Speed_3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Q)
 +AxisMappings=(AxisName="MouseMoveForward",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MouseMoveRight",Scale=-1.000000,Key=MouseX)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
