Correctif pour le packaging

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,9 +8,9 @@ TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Totem/Actors/GameInstance/BP_Totem_GameInstance.BP_Totem_GameInstance_C
+GameInstanceClass=/Game/Totem/Actors/GameInstance/BP_GameInstance.BP_GameInstance_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
